fixed dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -112,7 +112,7 @@
   }
 
   .prose p {
-    @apply mb-8 leading-7 text-slate-700;
+    @apply mb-8 leading-7 text-slate-700 dark:text-slate-200;
   }
 
   .prose p code {
@@ -132,7 +132,7 @@
   }
 
   .prose code[data-language="plaintext"] {
-    @apply rounded border bg-accent px-1 py-0.5 font-mono text-sm text-slate-700 !important;
+    @apply rounded border bg-accent px-1 py-0.5 font-mono text-sm text-slate-700 dark:text-slate-200 !important;
   }
 }
 
